IMPALA-5891: fix PeriodicCounterUpdater initialization

Avoid running static destructors and constructors to avoid the potential
for startup and teardown races and hard-to-understand behaviour.

Testing:
Ran core tests.

Change-Id: Ieede9fa194605fb53033033959110f3ef12f18c3
Reviewed-on: http://gerrit.cloudera.org:8080/7942
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Impala Public Jenkins